--- a/mobile.html
+++ b/mobile.html
@@ -527,7 +527,298 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         entertainment aur connectivity ko kaafi improve kar sakta hai.
     </p>
 </section>
+<section class="ak-section-wrapper">
+    <h1 class="ak-category-header">Mobile Phone Complete Guide – Working, Features, Security & Online Use</h1>
 
+    <p class="ak-detailed-text">
+        Aaj ke smartphones sirf calling device nahi balki ek mini-computer hain.
+        Inme hardware aur software milkar kaam karte hain jisse calling, internet,
+        photography, online shopping, payments aur editing jaise kaam possible hote hain.
+        Neeche mobile ke kaam karne ka tarika, settings, security aur online systems ko step-by-step explain kiya gaya hai.
+    </p>
+
+    <h3 class="ak-sub-topic">Mobile Kaise Kaam Karta Hai?</h3>
+    <p class="ak-detailed-text">
+        Mobile phone network towers ke through signals receive aur send karta hai.
+        SIM card user ki identity ko network se connect karta hai.
+        Processor (CPU) instructions ko process karta hai,
+        jabki operating system (Android ya iOS) apps aur functions ko control karta hai.
+    </p>
+
+    <div class="ak-info-grid">
+        <div class="ak-info-card">
+            <h4>Network System</h4>
+            <p>
+                4G/5G towers ke through calling aur internet data transfer hota hai.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>Processor & RAM</h4>
+            <p>
+                Processor mobile ka brain hota hai aur RAM multitasking smooth banati hai.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>Operating System</h4>
+            <p>
+                Android ya iOS system apps aur hardware ko manage karta hai.
+            </p>
+        </div>
+    </div>
+
+    <h3 class="ak-sub-topic">Mobile Hardware Kya Hota Hai?</h3>
+    <p class="ak-detailed-text">
+        Hardware mobile ke physical parts hote hain jo directly touch ya dekh sakte hain.
+    </p>
+
+    <div class="ak-info-grid">
+        <div class="ak-info-card">
+            <h4>Display Screen</h4>
+            <p>
+                Touchscreen jisse user mobile operate karta hai.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>Battery</h4>
+            <p>
+                Power supply provide karti hai jisse mobile chalta hai.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>Camera & Speaker</h4>
+            <p>
+                Photos, videos aur sound ke liye use hote hain.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>Motherboard & Chips</h4>
+            <p>
+                Internal circuits jo data processing aur connectivity manage karte hain.
+            </p>
+        </div>
+    </div>
+
+    <h3 class="ak-sub-topic">Mobile Software Kya Hota Hai?</h3>
+    <p class="ak-detailed-text">
+        Software programs aur applications hote hain jo mobile ko smart banate hain.
+    </p>
+
+    <div class="ak-info-grid">
+        <div class="ak-info-card">
+            <h4>Operating System</h4>
+            <p>
+                Android ya iOS jo pura system control karta hai.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>Mobile Apps</h4>
+            <p>
+                WhatsApp, YouTube, Instagram, Banking apps etc.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>System Settings</h4>
+            <p>
+                WiFi, Bluetooth, Display, Sound, Privacy, Security settings.
+            </p>
+        </div>
+    </div>
+
+    <h3 class="ak-sub-topic">Mobile Data Secure Kaise Karein?</h3>
+    <p class="ak-detailed-text">
+        Data security bahut important hai. Strong security settings use karna zaroori hai.
+    </p>
+
+    <div class="ak-info-grid">
+        <div class="ak-info-card">
+            <h4>Screen Lock</h4>
+            <p>
+                PIN, Password, Fingerprint ya Face Lock enable karein.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>App Permissions</h4>
+            <p>
+                Unnecessary apps ko camera, mic aur location access na dein.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>Two-Factor Authentication</h4>
+            <p>
+                Important accounts me OTP verification enable karein.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>Regular Updates</h4>
+            <p>
+                System aur apps ko updated rakhein for latest security patches.
+            </p>
+        </div>
+    </div>
+
+    <h3 class="ak-sub-topic">Mobile Se Online Order Ka System (E-commerce)</h3>
+    <p class="ak-detailed-text">
+        Mobile se aap Amazon, Flipkart, Meesho jaise platforms par easily shopping kar sakte hain.
+    </p>
+
+    <div class="ak-info-grid">
+        <div class="ak-info-card">
+            <h4>Step 1: App Install</h4>
+            <p>
+                Play Store ya App Store se e-commerce app download karein.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>Step 2: Account Create</h4>
+            <p>
+                Mobile number ya email se account banayein.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>Step 3: Product Select</h4>
+            <p>
+                Product search karke cart me add karein.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>Step 4: Payment & Order</h4>
+            <p>
+                UPI, Card ya COD se payment karke order confirm karein.
+            </p>
+        </div>
+    </div>
+
+    <h3 class="ak-sub-topic">Mobile Se Paytm Payment System</h3>
+    <p class="ak-detailed-text">
+        Paytm app se aap UPI transfer, recharge, bill payment aur QR code payment kar sakte hain.
+    </p>
+
+    <div class="ak-info-grid">
+        <div class="ak-info-card">
+            <h4>UPI Setup</h4>
+            <p>
+                Bank account link karke UPI ID create karein.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>QR Code Payment</h4>
+            <p>
+                Shop par QR scan karke instant payment karein.
+            </p>
+        </div>
+    </div>
+
+    <h3 class="ak-sub-topic">Mobile Photography, Videography & Editing</h3>
+    <p class="ak-detailed-text">
+        Modern smartphones high-quality camera aur editing apps ke saath aate hain.
+    </p>
+
+    <div class="ak-info-grid">
+        <div class="ak-info-card">
+            <h4>Photo & Video Shoot</h4>
+            <p>
+                HDR, Portrait, Night Mode aur 4K recording options available hote hain.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>Editing Apps</h4>
+            <p>
+                Lightroom, Snapseed, CapCut jaise apps se photo-video edit kar sakte hain.
+            </p>
+        </div>
+    </div>
+
+    <h3 class="ak-sub-topic">Conclusion</h3>
+    <p class="ak-detailed-text">
+        Mobile ek powerful device hai jo communication, earning, learning aur entertainment
+        sab kuch ek hi jagah provide karta hai. Agar sahi tarah se use kiya jaye
+        aur security ka dhyan rakha jaye to mobile life ko kaafi easy aur productive bana deta hai.
+    </p>
+</section>
+    <section class="ak-section-wrapper">
+    <h1 class="ak-category-header">Mobile Phones ke Fayde aur Nuksaan</h1>
+
+    <p class="ak-detailed-text">
+        Aaj ke modern zamane mein mobile phones har insaan ki zindagi ka important hissa ban chuke hain.
+        Communication se lekar online payments, education, entertainment aur business tak,
+        mobile ne life ko fast aur convenient bana diya hai.
+        Lekin jahan mobile ke kai fayde hain, wahin kuch nuksaan bhi hain jinhe ignore nahi kiya ja sakta.
+    </p>
+
+    <h3 class="ak-sub-topic">Mobile Phones ke Fayde</h3>
+    <p class="ak-detailed-text">
+        Smartphones ne duniya ko ek dusre ke kareeb la diya hai.
+        Internet access, social media, video calls aur online services ne
+        daily life ko kaafi asaan aur productive bana diya hai.
+    </p>
+
+    <div class="ak-info-grid">
+        <div class="ak-info-card">
+            <h4>Instant Communication</h4>
+            <p>
+                Calls, messages aur video chat ke through duniya ke kisi bhi kone se turant connect kiya ja sakta hai.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>Online Learning & Information</h4>
+            <p>
+                Students aur professionals mobile ke zariye online courses, tutorials aur information access kar sakte hain.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>Entertainment Source</h4>
+            <p>
+                Movies, music, games aur social media apps boredom ko door karte hain aur entertainment provide karte hain.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>Online Banking & Payments</h4>
+            <p>
+                Mobile banking aur UPI jaise features se paison ka len-den asaan aur secure ho gaya hai.
+            </p>
+        </div>
+    </div>
+
+    <h3 class="ak-sub-topic">Mobile Phones ke Nuksaan</h3>
+    <p class="ak-detailed-text">
+        Zyada mobile use karna health aur social life par negative effect daal sakta hai.
+        Agar mobile ka sahi tarah se istemal na kiya jaye to yeh addiction aur time waste ka reason ban sakta hai.
+    </p>
+
+    <div class="ak-info-grid">
+        <div class="ak-info-card">
+            <h4>Health Problems</h4>
+            <p>
+                Zyada screen time se aankhon ki problem, headache aur neend ki dikkat ho sakti hai.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>Time Wastage</h4>
+            <p>
+                Social media aur games par zyada waqt spend karne se productivity kam ho sakti hai.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>Social Isolation</h4>
+            <p>
+                Log real-life interaction kam karke virtual world mein zyada involve ho jate hain.
+            </p>
+        </div>
+        <div class="ak-info-card">
+            <h4>Privacy & Security Risks</h4>
+            <p>
+                Data leak, hacking aur online fraud jaise risks bhi mobile usage ke saath jude hote hain.
+            </p>
+        </div>
+    </div>
+
+    <h3 class="ak-sub-topic">Conclusion</h3>
+    <p class="ak-detailed-text">
+        Mobile phones ek powerful tool hain jo sahi use karne par life ko asaan aur productive bana dete hain.
+        Lekin unka overuse nuksaan bhi pahucha sakta hai.
+        Isliye zaroori hai ki mobile ka istemal balance ke saath kiya jaye.
+    </p>
+</section>
 
 
     
@@ -544,6 +835,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 
 </html>
+
 
 
 
